# Artificial_Life_Simulator

./: .dockerignore  Dockerfile  PROJECT_OVERVIEW.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: __init__.py  fetch_health_data.py  main.py  rag_faq.py  simulation.py  utils.py
app/.streamlit/: config.toml
app/data/: ## Chat Customization Diagnostics.md  ebola_west_africa_2014_2016.csv  faq_context.txt  ghsi_combined_data.json  ghsi_data.json  mpox_2022_global.csv
examples/: __init__.py  disease_forecasting_demo.py
tests/: __init__.py  test_end_to_end.py  test_validation.py
updff/: __init__.py
updff/core/: __init__.py  distribution.py  ensemble.py  forecast.py  scenario.py  state.py  uncertainty.py
updff/hazards/: __init__.py  interface.py
updff/hazards/disease/: __init__.py  compartments.py  engine.py  traits.py  transmission.py
updff/inference/: __init__.py  filters.py  likelihood.py  mcmc.py  optimizer.py
updff/validation/: __init__.py  calibration.py  diagnostics.py  metrics.py  scoring.py
